Run json-server with npm start

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & npm run json",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json": "json-server -p 5002 -w api/database.json"
   },
   "eslintConfig": {
     "extends": "react-app"
