--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
+    "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
