--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "reactstrap": "^6.5.0"
   },
   "scripts": {
-    "start": "react-scripts start & npm run json",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
