--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.2.1",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.10",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^4.1.3",
-    "node-sass": "^4.10.0",
-    "react": "^16.6.3",
-    "react-bootstrap-typeahead": "^3.2.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.2.1",
+    "node-sass": "^4.11.0",
+    "react": "^16.8.0-alpha.1",
+    "react-bootstrap-typeahead": "^3.3.2",
     "react-bs-notifier": "^5.0.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.0-alpha.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "2.1.3",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
