--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "reactstrap": "^6.5.0"
+    "react-scripts": "^2.1.5",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start & npm run json",
