--- a/Barkeeper2/ClientApp/package.json
+++ b/Barkeeper2/ClientApp/package.json
@@ -16,6 +16,8 @@
     "oidc-client": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.10.0",
+    "react-query-devtools": "^2.4.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -23,6 +25,8 @@
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "ajv": "^6.9.1",
     "cross-env": "^7.0.2",
     "eslint": "^6.6.0",
