some frontend ui stuff

--- a/Barkeeper2/ClientApp/package.json
+++ b/Barkeeper2/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.9.0",
     "@chakra-ui/core": "^1.0.0-rc.5",
+    "@chakra-ui/icons": "^1.0.0-rc.5",
     "@chakra-ui/theme": "^1.0.0-rc.5",
     "@svgr/webpack": "4.3.3",
     "@types/jest": "^26.0.15",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
+    "formik": "^2.2.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
