--- a/Barkeeper2/Barkeeper2.csproj
+++ b/Barkeeper2/Barkeeper2.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Folder Include="Data\Mutations\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Data\DataLoader\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
