--- a/Barkeeper2/ClientApp/package.json
+++ b/Barkeeper2/ClientApp/package.json
@@ -36,6 +36,8 @@
     "file-loader": "4.3.0",
     "formik": "^2.2.0",
     "fs-extra": "^8.1.0",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -56,8 +58,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
-    "react-query": "^2.23.1",
-    "react-query-devtools": "^2.6.0",
+    "react-query": "^3.12.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
