--- a/Barkeeper2/ClientApp/package.json
+++ b/Barkeeper2/ClientApp/package.json
@@ -4,9 +4,11 @@
     "private": true,
     "dependencies": {
         "@babel/core": "7.9.0",
-        "@chakra-ui/core": "^1.0.0-rc.5",
-        "@chakra-ui/icons": "^1.0.0-rc.5",
-        "@chakra-ui/theme": "^1.0.0-rc.5",
+        "@chakra-ui/icons": "^1.0.14",
+        "@chakra-ui/react": "^1.6.5",
+        "@chakra-ui/system": "^1.7.1",
+        "@emotion/react": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
         "@svgr/webpack": "4.3.3",
         "@types/jest": "^26.0.15",
         "@types/node": "^14.14.0",
@@ -35,6 +37,7 @@
         "eslint-plugin-react-hooks": "^1.6.1",
         "file-loader": "4.3.0",
         "formik": "^2.2.0",
+        "framer-motion": "^4.1.17",
         "fs-extra": "^8.1.0",
         "graphql": "^15.5.0",
         "graphql-request": "^3.4.0",
@@ -58,8 +61,8 @@
         "react-app-polyfill": "^1.0.6",
         "react-dev-utils": "^10.2.1",
         "react-dom": "^16.14.0",
+        "react-icons": "^4.2.0",
         "react-query": "^3.12.2",
-        "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.2.0",
         "resolve": "1.15.0",
         "resolve-url-loader": "3.1.2",
@@ -76,16 +79,8 @@
         "workbox-webpack-plugin": "4.3.1"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^3.10.1",
-        "@typescript-eslint/parser": "^3.10.1",
         "ajv": "^6.12.5",
         "cross-env": "^7.0.2",
-        "eslint": "^6.8.0",
-        "eslint-config-react-app": "^5.2.1",
-        "eslint-plugin-flowtype": "^5.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.21.5",
         "nan": "^2.14.1",
         "prettier": "2.3.2",
         "typescript": "^4.0.3"
