--- a/Barkeeper2/ClientApp/package.json
+++ b/Barkeeper2/ClientApp/package.json
@@ -17,17 +17,20 @@
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
         "@types/react-router-dom": "^5.1.8",
+        "@types/react-select": "^4.0.17",
         "formik": "^2.2.9",
         "framer-motion": "^4.0.0",
         "graphql": "^15.5.1",
         "graphql-request": "^3.4.0",
         "oidc-client": "^1.11.5",
+        "prettier": "^2.3.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^3.0.0",
         "react-query": "^3.19.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-select": "^4.3.1",
         "typescript": "^3.9.5",
         "web-vitals": "^0.2.2"
     },
