--- a/Barkeeper2/ClientApp/tsconfig.json
+++ b/Barkeeper2/ClientApp/tsconfig.json
@@ -1,35 +1,29 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-      "target": "esnext",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "strictNullChecks": false,
-      "forceConsistentCasingInFileNames": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "noEmit": true,
-      "jsx": "react",
-      "baseUrl": "src",
-      "paths": {
-          "@components": ["components"],
-          "@components/*": ["components/*"],
-          "@data": ["data"],
-          "@data/*": ["data/*"],
-          "@hooks": ["hooks"],
-          "@hooks/*": ["hooks/*"],
-          "@modules": ["modules"],
-          "@modules/*": ["modules/*"],
-          "@routes": ["routes"],
-          "@routes/*": ["routes/*"],
-          "@views": ["views"],
-          "@views/*": ["views/*"]
-      }
+    "target": "esnext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "strictNullChecks": false,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react",
+    "baseUrl": "src",
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
